Revision history for Lingua-EN-CommonMistakes

20121120    2012-11-20

  - Initial release
