@@ -29,7 +29,7 @@
    "provides" : {
       "Lingua::EN::CommonMistakes" : {
          "file" : "lib/Lingua/EN/CommonMistakes.pm",
-         "version" : "20121121"
+         "version" : "20121219"
       }
    },
    "release_status" : "stable",
@@ -38,5 +38,5 @@
          "http://opensource.org/licenses/gpl-license.php"
       ]
    },
-   "version" : "20121121"
+   "version" : "20121219"
 }
