@@ -17,7 +17,7 @@ name: Lingua-EN-CommonMistakes
 provides:
   Lingua::EN::CommonMistakes:
     file: lib/Lingua/EN/CommonMistakes.pm
-    version: 20121121
+    version: 20121219
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 20121121
+version: 20121219
