@@ -15,14 +15,14 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 1ad4d10bc254536f5ca0e6c64bbb9f3c9f0463c1 Build.PL
-SHA1 9240a0e01c266086fee2196f62e4fcf4bf768e0e Changes
+SHA1 bf45bda2e731ce5113d1e68cdb6f2eae2e3f79f5 Changes
 SHA1 f67ef1519e66aee9e106a77e385d5737954e3da0 MANIFEST
 SHA1 df020f6495775391a6519257435656fc9970ec8b MANIFEST.SKIP
-SHA1 00a3d86a6915053b41bb4842874cf4452a9acd04 META.json
-SHA1 40e06037bc3ec24e757a75230f9a1659506848ca META.yml
+SHA1 d47ca2dc32cb690545973af13e75bcaa1053f308 META.json
+SHA1 5056b1c598621db6a3203535311343f6de95e388 META.yml
 SHA1 6c61474e2b5c44b8c4ec0b080645e22c9954293d Makefile.PL
 SHA1 bb9e72b8c37fc5eab7f94c2a0db66345e609c70d README
-SHA1 d7de9afbd5354dbbb1cb3e23aab2bec3d9dc6521 lib/Lingua/EN/CommonMistakes.pm
+SHA1 bbb6915c7cffab45531512a07252fb376c1b3d9c lib/Lingua/EN/CommonMistakes.pm
 SHA1 f6cbf2dbf3f9cf0673fe8c7e3029ec4fd362340c t/00-load.t
 SHA1 306f269cc3691ca8c8616c8a782863304dbe0fcc t/10-mistakes.t
 SHA1 e66a8fae16a1ebf2a993af51a38312bb77d61da0 t/changes.t
@@ -31,11 +31,11 @@ SHA1 e68774abed6a9090b1fd450402a93fb7066c20b9 t/pod.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJQrA91AAoJEG3YuWOtEXouxDAH/i3dPf4mcsk7t1CKTGIBtLDU
-67RNiU6Hgu5m2FtrQpC/gl1UdSrwdehffMLyhQr+DQxToMDaBHHRMM+SXOkghuNi
-NhvOFLih2LYVIuhQ0TtMo9dKWSPLy5oGcfInMzT1NrXXKB9O4V2RSNxcpkbgSn2n
-+j4QJY/CAGtYQJd+9b3yfkLvPUxiAhfTkHumd96caIlfAArotItsBcHD0z0SzQCO
-8Q4ZuWN+DLdwRTQiFXabm0jYytVFMS6mDTmtVt6FjWtHMaQXFOdrSAvrxfWREx6r
-mpuZsuBfclPLQPOnCNolvqtX8J0xiCrzLvPfWMYCoZ/sn5AuqIoAjfnDZtxrMTc=
-=VYPD
+iQEcBAEBAgAGBQJQ0SULAAoJEG3YuWOtEXouJ6MIAIgJJvxmu3DxUnOMVUf8FHF5
+2S2frYVpzeqi2PYcfC+C4p48B+kLM0BM+4k8NfMukRCHTKkWN6NnJXiQpUzqfapw
+momuK280917epBNzpmyEU4FuesKd94/sBf4mlYXaYV9q2iZYqBCjcPqk7R75laWH
+tBr7j8DpRpEaXyHSK2gzlN3YycfdRSMAY10UpcFaxzvRtVdUWpLS+ChBOsIX+xcv
+JwGsL+SHOM9y9rBtLNyqd3BX5D221LbPG1z+QxHlP5fkQHk9VveWIgGthMcl4toz
+CZN/t4csPnrjp3xNUzLUmrQFm7uB21keXqP4+RuW64bUDnweKSufpexJ1BjikiI=
+=G0RB
 -----END PGP SIGNATURE-----
