@@ -6,7 +6,7 @@ use warnings FATAL => 'all';
 use warnings::register;
 use Carp;
 
-our $VERSION = 20121121;
+our $VERSION = 20121219;
 
 my %MISTAKES;
 
@@ -498,8 +498,6 @@ auhor author
 auhors authors
 authentification authentication
 authoratative authoritative
-authorisation authorization
-authorisations authorizations
 automaticaly automatically
 automaticly automatically
 automatize automate
@@ -1305,8 +1303,6 @@ interfrace interface
 interisting interesting
 interistingly interestingly
 intermittant intermittent
-internationalisation internationalization
-internationalisations internationalizations
 interrrupt interrupt
 interrrupts interrupts
 interrumped interrupted
@@ -1344,8 +1340,6 @@ invoce invoke
 invokate invoke
 invokation invocation
 invokations invocations
-ionisation ionization
-ionisations ionizations
 irrevesible irreversible
 isntance instance
 isntances instances
@@ -1403,8 +1397,6 @@ listveiw listview
 litle little
 litteral literal
 litterally literally
-localisation localization
-localisations localizations
 localy locally
 loggging logging
 loggin login
@@ -1543,8 +1535,6 @@ nickanmes nicknames
 nonexistant nonexistent
 noone nobody
 noone no-one
-normalisation normalization
-normalisations normalizations
 noticable noticeable
 notications notifications
 nucleous nucleus
@@ -1575,9 +1565,6 @@ ommitted omitted
 onself oneself
 onthe on the
 opend opened
-optimisation optimization
-optimisations optimizations
-optimise optimize
 optimite optimize
 optionnally optionally
 optionnal optional
@@ -1743,6 +1730,8 @@ programme program
 programmes programs
 programm program
 programms programs
+projet project
+projets projects
 promiscousness promiscuousness
 promiscous promiscuous
 promped prompted
@@ -1974,6 +1963,7 @@ shemes schemes
 shorctut shortcut
 shorctuts shortcuts
 shoud should
+shuld should
 shure sure
 similarily similarly
 similiarly similarly
@@ -2102,11 +2092,6 @@ synchonizations synchronizations
 synchonization synchronization
 synchonized synchronized
 synchroneously synchronously
-synchronisations synchronizations
-synchronisation synchronization
-synchronised synchronized
-synchronises synchronizes
-synchronise synchronize
 synchronitation synchronization
 synchronyze synchronize
 syncronization synchronization
@@ -2255,8 +2240,6 @@ usetnet Usenet
 usuable usable
 usuallly usually
 usualy usually
-utilisations utilizations
-utilisation utilization
 utilites utilities
 utillities utilities
 utilties utilities
@@ -2287,9 +2270,6 @@ vicitims victims
 vicitim victim
 visiblity visibility
 visiters visitors
-visualisations visualizations
-visualisation visualization
-visualise visualize
 visul visual
 vitual virtual
 volonteering volunteering
@@ -2370,11 +2350,22 @@ honoring honouring
 initialization initialisation
 initialize initialise
 initializing initialising
+internationalization internationalisation
+internationalizations internationalisations
+ionization ionisation
+ionizations ionisations
+localization localisation
+localizations localisations
 minimize minimise
 minimizing minimising
 neighbor neighbour
 neighborhood neighbourhood
 neighbors neighbours
+normalization normalisation
+normalizations normalisations
+optimization optimisation
+optimizations optimisations
+optimize optimise
 organization organisation
 organization organisation
 organizational organisational
@@ -2386,11 +2377,23 @@ organizing organising
 recognize recognise
 recognized recognised
 recognizes recognises
+synchronization synchronisation
+synchronizations synchronisations
+synchronize synchronise
+synchronized synchronised
+synchronizes synchronises
+utilization utilisation
+utilizations utilisations
+visualization visualisation
+visualizations visualisations
+visualize visualise
 
 :american
 acknowledgement acknowledgment
 acknowledgements acknowledgments
 analyses analyzes
+authorisation authorization
+authorisations authorizations
 behaviour behavior
 centre center
 colour color
@@ -2404,11 +2407,22 @@ honouring honoring
 initialisation initialization
 initialise initialize
 initialising initializing
+internationalisation internationalization
+internationalisations internationalizations
+ionisation ionization
+ionisations ionizations
+localisation localization
+localisations localizations
 minimise minimize
 minimising minimizing
 neighbour neighbor
 neighbourhood neighborhood
 neighbours neighbors
+normalisation normalization
+normalisations normalizations
+optimisation optimization
+optimisations optimizations
+optimise optimize
 organisation organization
 organisation organization
 organisational organizational
@@ -2420,3 +2434,13 @@ organising organizing
 recognise recognize
 recognised recognized
 recognises recognizes
+synchronisation synchronization
+synchronisations synchronizations
+synchronise synchronize
+synchronised synchronized
+synchronises synchronizes
+utilisation utilization
+utilisations utilizations
+visualisation visualization
+visualisations visualizations
+visualise visualize
